# AetherFilm

./: AetherFilm.metal  AetherFilmPlugin.cpp  AetherFilmPlugin.h  AetherFilmPlugin.mm  AetherParams.h  AnalyzeOFXMetal.java  CMakeLists.txt  ColorScience.h  Halation.h  Info.plist  Processor.h  Processor.mm  README.md  genesis_symbols.xml  main.cpp
